src/objects/Short_Term_Goal__c.object
<CustomObject>
    <description>NOTES Short-term Goals are the goals defined to achieve the Long-term Goals on a Plan. Short-term Goals are Master-detail to Plans. (PENDING SECURITY MODEL FINALIZATION)</description>
    <fields>
        <fullName>Achieved_DateTime__c</fullName>
        <label>Achieved DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Admission__c</fullName>
        <formula>Plan__r.Admission__c</formula>
        <label>Admission</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Frequency_and_Duration__c</fullName>
        <description>Frequency and Duration</description>
        <label>Frequency and Duration</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Individual_Name__c</fullName>
        <formula>&quot;&quot; 
&amp; Plan__r.Admission__r.Person_Being_Served__r.FirstName
&amp; &quot; &quot; 
&amp; Plan__r.Admission__r.Person_Being_Served__r.LastName</formula>
        <label>Individual Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Name__c</fullName>
        <formula>Plan__r.Plan_Name__c</formula>
        <label>Plan Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <description>The plan and long-term goals that this short-term goal supports.</description>
        <inlineHelpText>The plan and long-term goals that this short-term goal supports.</inlineHelpText>
        <label>Plan</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>Short-term Goals</relationshipLabel>
        <relationshipName>Short_Term_Goals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Read_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referral_Date__c</fullName>
        <description>Referral date from the individual&apos;s episode record</description>
        <formula>Plan__r.Admission__r.Effective_Date__c</formula>
        <inlineHelpText>Referral date from the individual&apos;s episode record</inlineHelpText>
        <label>Referral Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Short_Term_Goal_Description__c</fullName>
        <description>A detailed description of the short term goal.</description>
        <label>Short Term Goal Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Achieved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services Ended Prior to Completion</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Objectives__c</fullName>
        <label>Total Objectives</label>
        <summaryForeignKey>Objective__c.Short_term_Goal__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Short-term Goal</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Short_Term_Goal_Description__c</columns>
        <columns>Plan__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Short-term Goal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Short-term Goals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Start_Date_before_Admission_Start</fullName>
        <active>false</active>
        <description>will need when the issue gets fixed.</description>
        <errorConditionFormula>Plan__r.Admission__r.Effective_Date__c &gt;  Start_Date__c</errorConditionFormula>
        <errorMessage>The Start Date cannot be before the Admission Effective Date</errorMessage>
    </validationRules>
</CustomObject>